--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
             <div class="header-navbar__navegation" id="menu">
                 <ul>
                     <li>
-                        <a href="#home">Home <i class="fas fa-home"></i></a>
-                    </li>
-                    <li>
                         <a href="#skills">Sobre mi <i class="fas fa-user"></i></a>
                     </li>
                     <li>
@@ -84,6 +81,10 @@
             </div>
         </header>
         <main>
+            <!-- BUTTON HOME -->
+            <div class="button-home">
+                <a href="#home"><i class="fas fa-home fa-2x"></i> </a>
+            </div>
 
             <!-- SKILLS -->
             <section id="skills">
