Favicon sizes, opacity button home

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- CSS CUSTOM -->
         <link rel="stylesheet" href="styles/index.css">
         <!-- FAVICON -->
-        <link rel="icon" href="assets/about.png" type="imeg/png">
+        <link rel="icon" href="assets/about.png" type="imeg/png" sizes="32x32">
         <!-- FONT AWESOME -->
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
