Links social media

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                     <a href="https://www.linkedin.com/in/cledesma92/" target="_blank">
                         <i class="fab fa-linkedin-in fa-2x"></i>
                     </a>
-                    <a href="">
+                    <a href="https://github.com/cledesma92" target="_blank">
                         <i class="fab fa-github fa-2x"></i>
                     </a>
-                    <a href="">
+                    <a href="https://instagram.com/cvconestilo" target="_blank">
                         <i class="fab fa-instagram fa-2x"></i>
                     </a>
                     <a href="https://www.youtube.com/channel/UCwC0dGRBoKdQYqANnqYOhGA" target="_blank">
