--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             <div class="header-navbar__navegation" id="menu">
                 <ul>
                     <li>
-                        <a href="#skills">Sobre mi <i class="fas fa-user"></i></a>
+                        <a href="#skills">Sobre mí<i class="fas fa-user"></i></a>
                     </li>
                     <li>
-                        <a href="#services">Servicios <i class="fas fa-briefcase"></i></a>
+                        <a href="#services">Servicios<i class="fas fa-briefcase"></i></a>
                     </li>
                     <li>
-                        <a href="#certifications">Certificaciones <i class="fas fa-user-graduate"></i></a>
+                        <a href="#certifications">Certificaciones<i class="fas fa-user-graduate"></i></a>
                     </li>
                     <li>
-                        <a href="#works">Trabajos <i class="fas fa-tools"></i></a>
+                        <a href="#works">Trabajos<i class="fas fa-tools"></i></a>
                     </li>
                     <li>
-                        <a href="#contactme">Contáctame <i class="fas fa-comments"></i></a>
+                        <a href="#contactme">Contáctame<i class="fas fa-comments"></i></a>
                     </li>
                 </ul>
             </div>
@@ -130,7 +130,7 @@
                         <div class="services-container__card html__card">
                             <img src="assets/html.svg" alt="">
                             <h3>HTML</h3>
-                            <p>Incorporacion de imagen, sonido y video, accesibilidad, inputs y formularios, implementacion de hojas de estilos y interacciónes por medio de javaScript.</p>
+                            <p>Incorporación de imagen, sonido y video, accesibilidad, inputs y formularios, implementación de hojas de estilos y interacciones por medio de javaScript.</p>
                         </div>
                         <div class="services-container__card css__card">
                             <img src="assets/css.svg" alt="">
@@ -145,7 +145,7 @@
                         <div class="services-container__card js__card">
                             <img src="assets/js.svg" alt="">
                             <h3>JS</h3>
-                            <p>Manejo de arrays, condicionales y loops. Manipulacion de DOM por medio de javaScript. Manejo de evento, timers y local storage. </p>
+                            <p>Manejo de arrays, condicionales y loops. Manipulación de DOM por medio de javaScript. Manejo de evento, timers y local storage.</p>
                         </div>
                     </div>
                 </article>
@@ -264,7 +264,7 @@
                     <div class="contactme-container">
                         <div class="contactme-container__text">
                             <h3>Envíame un mensaje!</h3>
-                            <p>Escribime y te contesto a la brevedad.</p>
+                            <p>Escríbeme y te contestaré a la brevedad.</p>
                         </div>
                         <form name="contacto" data-netlify="true" class="contactme-container__form">
                             <lebel class="contactme-container__form__name" for="name">
