Adición de requiered en los inputs del form

--- a/index.html
+++ b/index.html
@@ -268,13 +268,13 @@
                         </div>
                         <form name="contacto" data-netlify="true" class="contactme-container__form">
                             <lebel class="contactme-container__form__name" for="name">
-                                <input name="nombre" id="name" type="text" placeholder="Tu nombre">
+                                <input name="nombre" id="name" type="text" placeholder="Tu nombre" required>
                             </lebel>
                             <lebel class="contactme-container__form__email" for="email">
-                                <input name="email" id="email" type="email" placeholder="Tu email">
+                                <input name="email" id="email" type="email" placeholder="Tu email" required>
                             </lebel>
                             <lebel class="contactme-container__form__comment" for="comment">
-                                <textarea name="mensaje" id="comment" placeholder="Tu mensaje"></textarea>
+                                <textarea name="mensaje" id="comment" placeholder="Tu mensaje" required></textarea>
                             </lebel>
                             <button type="submit">Enviar</button>
                         </form>
