Eliminación del target _blank cvconestilo

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     <div class="works-container">
                         <figure class="works-container__card">
                             <img src="assets/cv.png" alt="">
-                            <a class="works-container__card__mask cv" href="https://cvconestilo.netlify.app/" target="_blank">
+                            <a class="works-container__card__mask cv" href="https://cvconestilo.netlify.app/">
                                 <span>cvconestilo</span>
                             </a>
                         </figure>
