Correcciones de fondo header y h2 "Certificaciones"

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </section>
             <section>
                 <article id="certifications">
-                    <h2>Certificaiones</h2>
+                    <h2>Certificaciones</h2>
                     <div class="certifications-container">
                         <div class="certifications-container__card">
                             <div class="certifications-container__card__data">
